templates/SecurityGroup.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Creates a security group for the vNIOS instance",
    "Metadata": {},
    "Parameters": {
        "InstanceName": {
            "Type": "String"
        },
        "VpcID": {
            "Type": "AWS::EC2::VPC::Id"
        }
    },
    "Mappings": {},
    "Conditions": {},
    "Resources": {
        "securityGroup1": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for commonly used NIOS ports.",
                "GroupName": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "InstanceName"
                            },
                            "-sg"
                        ]
                    ]
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "HTTPS"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 53,
                        "ToPort": 53,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "DNS"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 53,
                        "ToPort": 53,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "DNS"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1194,
                        "ToPort": 1194,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Grid"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 2114,
                        "ToPort": 2114,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Grid"
                    }
                ],
                "VpcId": {
                    "Ref": "VpcID"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "InstanceName"
                                    },
                                    "-sg"
                                ]
                            ]
                        }
                    }
                ]
            }
        }
    },
    "Outputs": {
        "SecurityGroupID": {
            "Value": {
                "Ref": "securityGroup1"
            }
        }
    }
}
